# openeobench

./: .gitignore  .readthedocs.yaml  2025-06-18_OpenEO-Checker.csv  README.md  analyze_timing_statistics.py  api-endpoint.csv  backends.csv  backends.json  bratislava_10km_2018.csv  bratislava_10km_2018_summary.csv  bratislava_10km_2020.csv  bratislava_10km_2020_summary.csv  bratislava_10km_2024.csv  bratislava_10km_2024_summary.csv  calculate_statistics.py  combined_processes.json  crontab.py  main.py  ndvi_median_bratislava_10km_2024.csv  ndvi_median_bratislava_10km_2024_summary.csv  ndvi_median_vienna_10km_2024.csv  ndvi_median_vienna_10km_2024_summary.csv  openeo-checker.py  openeo-process-levels.csv  openeo_checker.py  openeo_checker_cron  openeo_process_levels.json  openeo_processes_with_levels.json  openeobench  openeotest.py  process_checker.py  process_summary.py  pyproject.toml  reducer_mean_bratislava_10km_2024.csv  reducer_mean_bratislava_10km_2024_summary.csv  reducer_mean_vienna_10km_2024.csv  reducer_mean_vienna_10km_2024_summary.csv  requirements.txt  run_scenarios.sh  scenario_runner.py  (+13 more)
advanced_scenarios/: ndvi_median_bratislava_10km_2024_earthengine.json  ndvi_median_bratislava_10km_2024_eodc.json  ndvi_median_vienna_10km_2024_earthengine.json  ndvi_median_vienna_10km_2024_eodc.json  reducer_mean_bratislava_10km_2024_earthengine.json  reducer_mean_bratislava_10km_2024_vito.json  reducer_mean_vienna_10km_2024_earthengine.json  reducer_mean_vienna_10km_2024_eodc.json
docs/: Makefile  README.md  SETUP.md  UV_WORKFLOW.md  requirements.txt
outputs/: 2025-06-18.csv  2025-06-19.csv  2025-06-20.csv  2025-06-21.csv
process_graph/: VITO_Bratislava_1km_GTiff.json
process_graphs/: bratislava_10km_2018_earthengine.json  bratislava_10km_2018_vito.json  bratislava_10km_2020_cdse.json  bratislava_10km_2020_earthengine.json  bratislava_10km_2024_cdse.json  bratislava_10km_2024_earthengine.json  bratislava_10km_2024_vito.json  vienna_10km_2018_earthengine.json  vienna_10km_2018_eodc.json  (+6 more)
(+51 files in other folders)
