[project]
name = "openeo-checker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gdal[numpy]==3.8.4",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "openeo>=0.42.1",
    "requests>=2.32.4",
    "rioxarray>=0.19.0",
]
