[project]
name = "openeobench"
version = "0.1.0"
description = "A comprehensive benchmarking and testing tool for OpenEO backends and services"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gdal[numpy]==3.8.4",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "openeo>=0.42.1",
    "requests>=2.32.4",
    "rioxarray>=0.19.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "sphinx-autobuild>=2021.3.14",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
]
 

[project.scripts]
openeo-checker = "openeo_checker:main"
process-checker = "process_checker:main"
process-summary = "process_summary:main"
openeotest = "openeotest:main"
